# tictactoe2

./: .gitignore  meson.build  run-tests.sh  test_ttt.cc  tictactoe2.cc
subprojects/: .gitignore
terminal/: linux_terminal.cpp  linux_terminal.h  meson.build  terminal.h
terminal/example/: main.cpp  meson.build
terminal/test/: meson.build  test_terminal.cpp
test/: meson.build
ttt/: meson.build  player.h  real_player.h  tictactoe.cpp  tictactoe.h
ttt/test/: meson.build  test_tictactoe.cpp
